@@ -140,8 +140,12 @@ sub install ( $class, %config ) {
             return $response;
         }
         catch ($error) {
+            my ($description) = split /\n/, $error =~ s/^\s+|\s+$//gr, 2;
+            $description =~ s/ at \S+ line \d+\.$//a;
+
             $span->record_exception($error);
-            $span->set_status( SPAN_STATUS_ERROR, $error );
+            $span->set_status( SPAN_STATUS_ERROR, $description );
+
             die $error;
         }
         finally {
